--- a/element-search/slider/task.html
+++ b/element-search/slider/task.html
@@ -11,7 +11,7 @@
 <body>
     <div class="slider">
         <div class="slider__items">
-            <div class="slider__item slider__item_active">
+            <div class="slider__item">
                 <img src="https://i.postimg.cc/Gpp6ryr0/180103-ufo-illustration-mn-1015-0758c11fb1637ed3431613cef06cd246.jpg" class="slider__image" alt="">
             </div>
             <div class="slider__item">
@@ -23,7 +23,7 @@
             <div class="slider__item">
                 <img src="https://i.postimg.cc/DwntjNMw/HV-UFO-1983-ftr.jpg" class="slider__image" alt="">
             </div>
-            <div class="slider__item">
+            <div class="slider__item slider__item_active">
                 <img src="https://i.postimg.cc/yNrtN8YD/istock-611295678.jpg" class="slider__image" alt="">
             </div>
         </div>
@@ -32,13 +32,13 @@
                 <div class="slider__arrow slider__arrow_prev">&lt;</div>
                 <div class="slider__arrow slider__arrow_next">&gt;</div>
             </div>
-            <div class="slider__dots">
+            <!--<div class="slider__dots">
                 <div class="slider__dot slider__dot_active"></div>
                 <div class="slider__dot"></div>
                 <div class="slider__dot"></div>
                 <div class="slider__dot"></div>
                 <div class="slider__dot"></div>
-            </div>
+            </div>-->
         </div>
     </div>
     <script src="task.js"></script>
