--- a/document-structure/cart/task.html
+++ b/document-structure/cart/task.html
@@ -15,7 +15,7 @@
         <div class="cart__products">
             <!-- разметка добавленного в корзину товара -->
             <!--<div class="cart__product" data-id="1">
-                <img class="cart__product-image" src="image.png">
+                <img class="cart__product-image" src="https://cs8.pikabu.ru/post_img/2017/09/21/6/150598626812465714.jpg">
                 <div class="cart__product-count">20</div>
             </div>-->
         </div>
