--- a/client-state/auth/task.html
+++ b/client-state/auth/task.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="task.css">
 </head>
 <body>
-    <div class="signin" id="signin">
+    <div class="signin signin_active" id="signin">
         <h2 class="title">Вход</h2>
-        <form action="https://netology-slow-rest.herokuapp.com/auth.php" id="signin__form">
+        <form id="signin__form">
             <div class="row">
                 <input type="text" name="login" class="control" placeholder="Логин">
             </div>
